# rust_space

./: .gitignore  README.md
main/: chat_messages.sql  users.sql
robotdreams/: Cargo.toml  database.sqlite
robotdreams/assets/files/: rust.txt
robotdreams/client/: Cargo.toml  app.js  index.html  prometheus.yml
robotdreams/client/src/: client.rs  lib.rs  main.rs  ui.rs  web_server.rs
robotdreams/migrations/: 001_init.sql
robotdreams/server/: Cargo.toml
robotdreams/server/src/: lib.rs  main.rs
robotdreams/shared_library/: Cargo.toml
robotdreams/shared_library/src/: lib.rs
robotdreams/src/: client.rs  csv_utils.rs  input.csv  lib.rs  main.rs  server.rs  text_utils.rs
