[package]
name = "robotdreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
image = "0.23"
chrono = "0.4.31"

shared_library = { path = "../shared_library" }