[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
image = "0.23"
chrono = "0.4.31"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }

shared_library = { path = "../shared_library" }
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rayon = "1.8.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
actix-web = "4.4.0"
